--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.TimeCatcher" parent="android:Theme.Material.Light.NoActionBar" />
+    <!-- Tema principal de la aplicación -->
+    <style name="Theme.TimeCatcher" parent="Theme.AppCompat.DayNight">
+        <!-- Colores principales -->
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimaryDark">@color/purple_700</item>
+        <item name="colorAccent">@color/teal_200</item>
+
+        <!-- Configuración de la barra de acción -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <!-- <style name="Theme.TimeCatcher" parent="android:Theme.Material.Light.NoActionBar" /> -->
 </resources>
