--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -20,8 +20,7 @@
 
     <item
         android:id="@+id/nav_logout"
-        android:title="Cerrar Sesión"
-        android:icon="@drawable/ic_logout" />
+        android:icon="@drawable/ic_logout"
+        android:title="Cerrar Sesión" />
 
 </menu>
-
