--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,22 +16,14 @@
         android:src="@drawable/logo"
         android:layout_gravity="center" />
 
-    <TextView
-        android:id="@+id/app_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="KimiaVpn"
-        android:textColor="@android:color/white"
-        android:textSize="24sp"
-        android:layout_marginTop="16dp"
-        android:gravity="center" />
+
 
     <!-- Username input -->
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Username"
+        android:hint="Email"
         android:drawableStart="@drawable/ic_user"
         android:layout_marginTop="24dp"
         android:padding="12dp"
@@ -40,7 +32,7 @@
 
     <!-- Password input -->
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
@@ -64,7 +56,7 @@
 
     <!-- Login button -->
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
@@ -75,10 +67,10 @@
 
     <!-- Buy Account button -->
     <Button
-        android:id="@+id/buy_account_button"
+        android:id="@+id/ntnRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Buy Account"
+        android:text="Register"
         android:backgroundTint="@android:color/white"
         android:textColor="@color/purple_700"
         android:layout_marginTop="16dp"
