--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
-        android:drawableStart="@drawable/ic_user"
+        android:drawableStart="@drawable/ic_email"
         android:layout_marginTop="24dp"
         android:padding="12dp"
         android:background="@drawable/rounded_edittext"
