--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -9,5 +9,5 @@
     <!-- Bordes opcionales -->
     <stroke
         android:width="1dp"
-        android:color="#CCCCCC" />
+        android:color="#3700B3" />
 </shape>
