--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,14 @@
         android:src="@drawable/logo"
         android:layout_gravity="center" />
 
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/rounded_container"
+        android:padding="16dp"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="24dp">
 
     <!-- Username input -->
     <EditText
@@ -44,15 +51,6 @@
         android:layout_marginHorizontal="32dp" />
 
     <!-- Forgot Password -->
-    <TextView
-        android:id="@+id/forgot_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot your password?"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
-        android:layout_marginTop="8dp"
-        android:layout_gravity="center" />
 
     <!-- Login button -->
     <Button
@@ -61,19 +59,22 @@
         android:layout_height="wrap_content"
         android:text="Login"
         android:textColor="@android:color/white"
+        android:background="@drawable/rounded_button"
         android:backgroundTint="@color/purple_700"
         android:layout_marginTop="24dp"
         android:layout_marginHorizontal="32dp" />
 
     <!-- Buy Account button -->
     <Button
-        android:id="@+id/ntnRegister"
+        android:id="@+id/btnRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Register"
-        android:backgroundTint="@android:color/white"
+        android:background="@drawable/button_outline"
+
         android:textColor="@color/purple_700"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="32dp" />
 
+</LinearLayout>
 </LinearLayout>
