--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,12 +9,14 @@
     android:gravity="center">
 
     <!-- Logo and title -->
+
+
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/logo"
-        android:layout_gravity="center" />
+        android:layout_width="195dp"
+        android:layout_height="181dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_user" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +25,7 @@
         android:background="@drawable/rounded_container"
         android:padding="16dp"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="24dp">
+        android:layout_marginTop="40dp">
 
     <!-- Username input -->
     <EditText
