--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,16 +7,21 @@
     android:background="@drawable/background"
     android:orientation="vertical"
     android:gravity="center">
-
-    <!-- Logo and title -->
-
-
     <ImageView
         android:id="@+id/logo"
         android:layout_width="195dp"
         android:layout_height="181dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_user" />
+    <TextView
+        android:id="@+id/app_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TimeCatcher"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
+        android:layout_marginTop="16dp"
+        android:gravity="center" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -73,7 +78,6 @@
         android:layout_height="wrap_content"
         android:text="Register"
         android:background="@drawable/button_outline"
-
         android:textColor="@color/purple_700"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="32dp" />
