--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,16 @@
         android:layout_height="181dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_user" />
+    <TextView
+        android:id="@+id/app_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TimeCatcher"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
+        android:layout_marginTop="16dp"
+        android:gravity="center" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
