--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/fondo_azul"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,9 +16,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bienvenido"
-            android:textSize="32sp"
-            android:textColor="@color/purple_700"/>
-
+            android:textSize="50sp"
+            android:textColor="#290fbd"
+            android:textStyle="bold"
+            />
         <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
