--- a/app/src/main/res/layout/dialog_create_activity.xml
+++ b/app/src/main/res/layout/dialog_create_activity.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="vertical"
-android:padding="20dp"
-android:layout_width="match_parent"
-android:layout_height="wrap_content" >
-
-<EditText
-    android:id="@+id/etTitle"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:padding="20dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="Título" />
+    android:layout_height="match_parent"
+    android:background="@drawable/back">
 
-<EditText
-    android:id="@+id/etDescription"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="Descripción"
-    android:layout_marginTop="8dp"/>
+    <EditText
+        android:id="@+id/etTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Título"
+        android:background="@drawable/rounded_edittext2"
+        android:padding="12dp"
+        android:textColor="#000"
+        android:textSize="16sp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="40dp" />
+
+    <EditText
+        android:id="@+id/etDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Descripción"
+        android:background="@drawable/rounded_edittext2"
+        android:padding="12dp"
+        android:textColor="#000"
+        android:textSize="16sp"
+        android:layout_marginBottom="20dp" />
 
 </LinearLayout>
