--- a/app/src/main/res/layout/dialog_update_delete.xml
+++ b/app/src/main/res/layout/dialog_update_delete.xml
@@ -1,23 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:orientation="vertical"
 android:padding="20dp"
 android:layout_width="match_parent"
-android:layout_height="wrap_content" >
+android:layout_height="match_parent"
+android:background="@drawable/backdos">
 
 <EditText
     android:id="@+id/etTitleUpdate"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:hint="Título" />
+    android:hint="Título"
+    android:background="@drawable/rounded_edittext2"
+    android:padding="12dp"
+    android:textColor="#000"
+    android:textSize="16sp"
+    android:layout_marginTop="30dp"
+    android:layout_marginBottom="40dp" />
 
 <EditText
     android:id="@+id/etDescriptionUpdate"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="Descripción"
-    android:layout_marginTop="8dp"/>
+    android:background="@drawable/rounded_edittext2"
+    android:padding="12dp"
+    android:textColor="#000"
+    android:textSize="16sp"
+    android:layout_marginBottom="20dp" />
 
 </LinearLayout>
