--- a/app/src/main/res/layout/dialog_create_activity.xml
+++ b/app/src/main/res/layout/dialog_create_activity.xml
@@ -5,7 +5,7 @@
     android:padding="20dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background">
+    android:background="@drawable/back">
 
     <EditText
         android:id="@+id/etTitle"
