--- a/app/src/main/res/layout/dialog_update_delete.xml
+++ b/app/src/main/res/layout/dialog_update_delete.xml
@@ -5,7 +5,7 @@ android:orientation="vertical"
 android:padding="20dp"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:background="@drawable/background">
+android:background="@drawable/backdos">
 
 <EditText
     android:id="@+id/etTitleUpdate"
