Uso practico en la app (BD Local y Backend)

--- a/app/src/main/res/layout/dialog_create_activity.xml
+++ b/app/src/main/res/layout/dialog_create_activity.xml
@@ -17,13 +17,24 @@
         android:textColor="#000"
         android:textSize="16sp"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="40dp" />
+        android:layout_marginBottom="20dp" />
 
     <EditText
         android:id="@+id/etDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Descripción"
+        android:background="@drawable/rounded_edittext2"
+        android:padding="12dp"
+        android:textColor="#000"
+        android:textSize="16sp"
+        android:layout_marginBottom="20dp" />
+
+    <EditText
+        android:id="@+id/etLocalEstimatedTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Tiempo Estimado"
         android:background="@drawable/rounded_edittext2"
         android:padding="12dp"
         android:textColor="#000"
