--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Email"
+        android:hint="Correo Electrónico"
         android:drawableStart="@drawable/ic_user"
         android:layout_marginTop="24dp"
         android:padding="12dp"
@@ -44,7 +44,7 @@
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="Contraseña"
         android:drawableStart="@drawable/ic_eye"
         android:inputType="textPassword"
         android:layout_marginTop="16dp"
@@ -52,26 +52,23 @@
         android:background="@drawable/rounded_edittext"
         android:layout_marginHorizontal="32dp" />
 
-    <!-- Forgot Password -->
-
     <!-- Login button -->
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="Comenzar"
         android:textColor="@android:color/white"
         android:background="@drawable/rounded_button"
         android:backgroundTint="@color/purple_700"
         android:layout_marginTop="24dp"
         android:layout_marginHorizontal="32dp" />
 
-    <!-- Buy Account button -->
     <Button
-        android:id="@+id/btnRegister"
+        android:id="@+id/btnGoToRegister"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register"
+        android:text="Nuevo Viajero"
         android:background="@drawable/button_outline"
 
         android:textColor="@color/purple_700"
