--- a/app/src/main/res/layout/dialog_update_delete.xml
+++ b/app/src/main/res/layout/dialog_update_delete.xml
@@ -17,7 +17,7 @@ android:background="@drawable/backdos">
     android:textColor="#000"
     android:textSize="16sp"
     android:layout_marginTop="30dp"
-    android:layout_marginBottom="40dp" />
+    android:layout_marginBottom="20dp" />
 
 <EditText
     android:id="@+id/etDescriptionUpdate"
@@ -29,5 +29,16 @@ android:background="@drawable/backdos">
     android:textColor="#000"
     android:textSize="16sp"
     android:layout_marginBottom="20dp" />
+
+    <EditText
+        android:id="@+id/etEditEstimatedTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Tiempo Estimado"
+        android:background="@drawable/rounded_edittext2"
+        android:padding="12dp"
+        android:textColor="#000"
+        android:textSize="16sp"
+        android:layout_marginBottom="20dp" />
 
 </LinearLayout>
