--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,23 +9,34 @@
     android:gravity="center">
 
     <!-- Logo and title -->
+    <!-- Frase motivadora -->
+    <TextView
+        android:id="@+id/tvWelcomeMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TimeCatcher"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
+        android:layout_gravity="center"
+        android:padding="8dp" />
 
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="195dp"
-        android:layout_height="181dp"
+        android:layout_width="300dp"
+        android:layout_height="180dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_user" />
+        android:src="@drawable/newlogo" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="330dp"
         android:orientation="vertical"
         android:background="@drawable/rounded_container"
         android:padding="16dp"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="1dp">
 
     <!-- Username input -->
     <EditText
