Mejora de diseño general

--- a/app/src/main/res/drawable/button_outline.xml
+++ b/app/src/main/res/drawable/button_outline.xml
@@ -6,7 +6,7 @@
     <!-- Contorno del botón -->
     <stroke
         android:width="2dp"
-        android:color="@color/purple_700" />
+        android:color="@color/white" />
 
     <!-- Esquinas redondeadas -->
     <corners android:radius="16dp" />
