--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/purple_700" /> <!-- Color de fondo del botón -->
+    <solid android:color="@color/white" /> <!-- Color de fondo del botón -->
     <corners android:radius="25dp" /> <!-- Esquinas redondeadas -->
     <padding
         android:left="12dp"
