--- a/app/src/main/res/drawable/rounded_container.xml
+++ b/app/src/main/res/drawable/rounded_container.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFF" /> <!-- Color blanco con transparencia -->
+    <solid android:color="#40FFFFFF" /> <!-- Color blanco con transparencia -->
     <corners android:radius="16dp" /> <!-- Esquinas redondeadas -->
 </shape>
