--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,28 +4,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/loginimagen"
     android:orientation="vertical"
     android:gravity="center">
 
     <!-- Logo and title -->
     <!-- Frase motivadora -->
+
+
     <TextView
         android:id="@+id/tvWelcomeMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TimeCatcher"
-        android:textSize="35sp"
-        android:textStyle="bold"
-        android:textColor="#FFFFFF"
         android:layout_gravity="center"
-        android:padding="8dp" />
-
+        android:padding="8dp"
+        android:text="TimeCatcher"
+        android:textColor="#FFFFFF"
+        android:textSize="35sp"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="300dp"
-        android:layout_height="180dp"
+        android:layout_width="280dp"
+        android:layout_height="130dp"
         android:layout_gravity="center"
         android:src="@drawable/newlogo" />
 
@@ -82,7 +83,7 @@
         android:text="Nuevo Viajero"
         android:background="@drawable/button_outline"
 
-        android:textColor="@color/purple_700"
+        android:textColor="@color/white"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="32dp" />
 
