--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@drawable/backhome">
+    android:background="@drawable/fragmenthome">
 
     <!-- Frase motivadora -->
     <TextView
@@ -15,7 +15,7 @@
         android:text="¡Descubre nuevos desafíos en tu ciudad!"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#000000"
+        android:textColor="@color/white"
         android:layout_gravity="center"
         android:padding="8dp" />
 
@@ -97,6 +97,7 @@
         android:background="@drawable/rounded_button_register"
         android:textColor="#fff"
         android:padding="12dp"
+        android:backgroundTint="#0277BD"
         android:layout_marginTop="16dp"
         android:layout_gravity="center" />
 </LinearLayout>
