--- a/app/src/main/res/layout/item_in_progress.xml
+++ b/app/src/main/res/layout/item_in_progress.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     android:padding="12dp"
     android:background="@drawable/rounded_background"
+    android:backgroundTint="#B2EBF2"
     android:elevation="4dp">
 
     <TextView
@@ -38,6 +39,7 @@
         android:text="Completado"
         android:background="@drawable/rounded_button_register"
         android:textColor="#FFFFFF"
+        android:backgroundTint="#0277BD"
         android:paddingHorizontal="16dp"
         android:paddingVertical="8dp" />
 </LinearLayout>
